--- a/styles/scss/themes/default/_defaultTheme.scss
+++ b/styles/scss/themes/default/_defaultTheme.scss
@@ -348,7 +348,7 @@ section.contact {
         flex-direction: row;
         transition: .5s;
         border-radius: 10px;
-        height: 33rem;
+        height: 32rem;
         min-width: 100%;
         justify-content: flex-start;
         border: 2px solid #cacaca;
@@ -737,6 +737,7 @@ section.contact {
             height: 500px;
 
             &__techStack {
+                display: block;
                 left: 12.5px;
                 padding: 10px 15px;
                 p {
@@ -745,6 +746,24 @@ section.contact {
             }
             &__subtitle {
                 font-size: 24px;
+            }
+        }
+    }
+    .projects .mobile {
+        &:hover {
+            border: 2px solid #cacaca
+        }
+        .item {
+            &__techStack {
+                display: none;
+            }
+            &__subtitle {
+                font-size: 24px;
+            }
+            &__image {
+                img {
+                    transform: scale(1);
+                }
             }
         }
     }
